parameters from url

--- a/index.html
+++ b/index.html
@@ -227,11 +227,11 @@
                     <div id="FilterQuantity" class="filter-content numbers">
                         <label for="FilterMinQuantity">
                             <span>Ilość od</span>
-                            <input type="text" id="FilterMinQuantity" name="FilterMinQuantity" value="" min="0" name="FilterMinQuantity">
+                            <input type="text" id="FilterMinQuantity" name="FilterMinQuantity" value=""  name="FilterMinQuantity">
                         </label>
                         <label for="FilterMaxQuantity">
                             <span>Ilość do</span>
-                            <input type="text" id="FilterMaxQuantity" name="FilterMaxQuantity" value="" min="0" name="FilterMaxQuantity">
+                            <input type="text" id="FilterMaxQuantity" name="FilterMaxQuantity" value=""  name="FilterMaxQuantity">
                         </label>
 
                     </div>
@@ -242,11 +242,11 @@
                     <div id="FilterStartPrice" class="filter-content numbers">
                         <label for="FilterMinStartPrice">
                             <span>Cena od</span>
-                            <input type="text" id="FilterMinStartPrice" name="FilterMinStartPrice" value="" min="0" name="FilterMinStartPrice">
+                            <input type="text" id="FilterMinStartPrice" name="FilterMinStartPrice" value=""  name="FilterMinStartPrice">
                         </label>
                         <label for="FilterMaxStartPrice">
                             <span>Cena do</span>
-                            <input type="text" id="FilterMaxStartPrice" name="FilterMaxStartPrice" value="" min="0" name="FilterMaxStartPrice">
+                            <input type="text" id="FilterMaxStartPrice" name="FilterMaxStartPrice" value=""  name="FilterMaxStartPrice">
                         </label>
                     </div>
                 </div>
@@ -256,11 +256,11 @@
                     <div id="FilterPrice" class="filter-content numbers">
                         <label for="FilterMinPrice">
                             <span>Cena od</span>
-                            <input type="text" id="FilterMinPrice" name="FilterMinPrice" value="" min="0" name="FilterMinPrice">
+                            <input type="text" id="FilterMinPrice" name="FilterMinPrice" value=""  name="FilterMinPrice">
                         </label>
                         <label for="FilterMaxPrice">
                             <span>Cena do</span>
-                            <input type="text" id="FilterMaxPrice" name="FilterMaxPrice" value="" min="0" name="FilterMaxPrice">
+                            <input type="text" id="FilterMaxPrice" name="FilterMaxPrice" value=""  name="FilterMaxPrice">
                         </label>
                     </div>
                 </div>
@@ -270,11 +270,11 @@
                     <div id="FilterQtyMin" class="filter-content numbers">
                         <label for="FilterMinQtyMin">
                             <span>Ilość od</span>
-                            <input type="text" id="FilterMinQtyMin" name="FilterMinQtyMin" value="" min="0" name="FilterMinQtyMin">
+                            <input type="text" id="FilterMinQtyMin" name="FilterMinQtyMin" value=""  name="FilterMinQtyMin">
                         </label>
                         <label for="FilterMaxQtyMin">
                             <span>Ilość do</span>
-                            <input type="text" id="FilterMaxQtyMin" name="FilterMaxQtyMin" value="" min="0" name="FilterMaxQtyMin">
+                            <input type="text" id="FilterMaxQtyMin" name="FilterMaxQtyMin" value=""  name="FilterMaxQtyMin">
                         </label>
                     </div>
                 </div>
@@ -284,11 +284,11 @@
                     <div id="FilterDate" class="filter-content dates">
                         <label for="FilterStart">
                             <span>Data zakończenia od</span>
-                            <input type="date" id="FilterStart" name="FilterStart" value="" min="2020-12-04" name="FilterStart">
+                            <input type="date" id="FilterStart" name="FilterStart" value=""  name="FilterStart">
                         </label>
                         <label for="FilterEnd">
                             <span>Data zakończenia do</span>
-                            <input type="date" id="FilterEnd" name="FilterEnd" value="" min="2020-12-04" name="FilterEnd">
+                            <input type="date" id="FilterEnd" name="FilterEnd" value=""  name="FilterEnd">
                         </label>
                     </div>
                 </div>
@@ -298,11 +298,11 @@
                     <div id="FilterReceiptDate" class="filter-content dates">
                         <label for="FilterReceiptDate">
                             <span>Termin odbioru od</span>
-                            <input type="date" id="FilterReceiptDate" name="FilterReceiptDate" value="" min="2020-12-04" name="FilterReceiptDate">
+                            <input type="date" id="FilterReceiptDate" name="FilterReceiptDate" value=""  name="FilterReceiptDate">
                         </label>
                         <label for="FilterMaxReceiptDate">
                             <span>Termin odbioru do</span>
-                            <input type="date" id="FilterMaxReceiptDate" name="FilterMaxReceiptDate" value="" min="2020-12-04" name="FilterMaxReceiptDate">
+                            <input type="date" id="FilterMaxReceiptDate" name="FilterMaxReceiptDate" value=""  name="FilterMaxReceiptDate">
                         </label>
                     </div>
                 </div>
